Done with Assignment

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent" >
-    <ImageView
-            android:id="@+id/img"
-            android:layout_width="50dp"
-            android:layout_height="50dp"/>
+              android:orientation="vertical"
+              android:layout_height="match_parent">
 
     <TextView
             android:id="@+id/txt"
+            android:textSize="32sp"
             android:layout_width="wrap_content"
             android:layout_height="50dp" />
+
+    <ImageView
+        android:id="@+id/imag"
+        android:layout_width="match_parent"
+        android:layout_height="401dp" />
+
     <Button
-            android:id="@+id/back"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp" />
+        android:id="@+id/back"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text="Back" />
 
 </LinearLayout>
